@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>br.com.ldavip</groupId>
     <artifactId>jtetris</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -24,6 +24,11 @@
             <artifactId>javafx-controls</artifactId>
             <version>15.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>jline</groupId>
+            <artifactId>jline2</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -34,35 +39,6 @@
                 <version>0.0.5</version>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
-                    <options>
-                        <option>--module-path /home/luis/libs/java/javafx-sdk-11.0.2/lib</option>
-                        <option>--add-modules=javafx.fxml,javafx.controls</option>
-                    </options>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>${start-class}</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>${start-class}</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
@@ -72,7 +48,7 @@
         <profile>
             <id>console</id>
             <properties>
-                <start-class>br.com.ldavip.jtetris.ConsoleTest</start-class>
+                <start-class>br.com.ldavip.jtetris.ui.console.ConsoleUI</start-class>
             </properties>
         </profile>
         <profile>
@@ -81,7 +57,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <start-class>br.com.ldavip.jtetris.Main</start-class>
+                <start-class>br.com.ldavip.jtetris.ui.fx.Main</start-class>
             </properties>
         </profile>
     </profiles>
